SDK/Delphi/TitanEngine.pas

  procedure HooksScanModuleMemory(ModuleBase:LongInt; CallBack:Pointer); stdcall;  external 'TitanEngine.dll' name 'HooksScanModuleMemory';
  procedure HooksScanEntireProcessMemory(CallBack:Pointer); stdcall;  external 'TitanEngine.dll' name 'HooksScanEntireProcessMemory';
  procedure HooksScanEntireProcessMemoryEx(); stdcall;  external 'TitanEngine.dll' name 'HooksScanEntireProcessMemoryEx';
{TitanEngine.Tracer.functions}
  procedure TracerInit(); stdcall;  external 'TitanEngine.dll' name 'TracerInit';
  function TracerLevel1(hProcess,APIAddress:LongInt):LongInt; stdcall;  external 'TitanEngine.dll' name 'TracerLevel1';
  function HashTracerLevel1(hProcess,APIAddress,NumberOfInstructions:LongInt):LongInt; stdcall;  external 'TitanEngine.dll' name 'HashTracerLevel1';
  function TracerDetectRedirection(hProcess,APIAddress:LongInt):LongInt; stdcall;  external 'TitanEngine.dll' name 'TracerDetectRedirection';
  function TracerFixKnownRedirection(hProcess,APIAddress,RedirectionId:LongInt):LongInt; stdcall;  external 'TitanEngine.dll' name 'TracerFixKnownRedirection';
  function TracerFixRedirectionViaImpRecPlugin(hProcess:LongInt;szPluginName:PAnsiChar;APIAddress:LongInt):LongInt; stdcall;  external 'TitanEngine.dll' name 'TracerFixRedirectionViaImpRecPlugin';
{TitanEngine.Exporter.functions}
  procedure ExporterCleanup(); stdcall;  external 'TitanEngine.dll' name 'ExporterCleanup';
  procedure ExporterSetImageBase(ImageBase:LongInt); stdcall;  external 'TitanEngine.dll' name 'ExporterSetImageBase';
  procedure ExporterInit(MemorySize,ImageBase,ExportOrdinalBase:LongInt; szExportModuleName:PAnsiChar); stdcall;  external 'TitanEngine.dll' name 'ExporterInit';
  function ExporterAddNewExport(szExportName:PAnsiChar; ExportRelativeAddress:LongInt):boolean; stdcall;  external 'TitanEngine.dll' name 'ExporterAddNewExport';
  function ExporterAddNewOrdinalExport(OrdinalNumber,ExportRelativeAddress:LongInt):boolean; stdcall;  external 'TitanEngine.dll' name 'ExporterAddNewOrdinalExport';
  function ExporterGetAddedExportCount():LongInt; stdcall;  external 'TitanEngine.dll' name 'ExporterGetAddedExportCount';
  function ExporterEstimatedSize():LongInt; stdcall;  external 'TitanEngine.dll' name 'ExporterEstimatedSize';
  function ExporterBuildExportTable(StorePlace,FileMapVA:LongInt):boolean; stdcall;  external 'TitanEngine.dll' name 'ExporterBuildExportTable';
  function ExporterBuildExportTableEx(szExportFileName,szSectionName:PAnsiChar):boolean; stdcall;  external 'TitanEngine.dll' name 'ExporterBuildExportTableEx';
  function ExporterLoadExportTable(szFileName:PAnsiChar):boolean; stdcall;  external 'TitanEngine.dll' name 'ExporterLoadExportTable';
{TitanEngine.Librarian.functions}
  function LibrarianSetBreakPoint(szLibraryName:PAnsiChar; bpxType:LongInt; SingleShoot:boolean; bpxCallBack:Pointer):boolean; stdcall;  external 'TitanEngine.dll' name 'LibrarianSetBreakPoint';
  function LibrarianRemoveBreakPoint(szLibraryName:PAnsiChar; bpxType:LongInt):boolean; stdcall;  external 'TitanEngine.dll' name 'LibrarianRemoveBreakPoint';
  function LibrarianGetLibraryInfo(szLibraryName:PAnsiChar):Pointer; stdcall;  external 'TitanEngine.dll' name 'LibrarianGetLibraryInfo';
  function LibrarianGetLibraryInfoEx(BaseOfDll:Pointer):Pointer; stdcall;  external 'TitanEngine.dll' name 'LibrarianGetLibraryInfoEx';
  procedure LibrarianEnumLibraryInfo(BaseOfDll:Pointer); stdcall;  external 'TitanEngine.dll' name 'LibrarianEnumLibraryInfo';
{TitanEngine.Process.functions}
  function GetActiveProcessId(szImageName:PAnsiChar):LongInt; stdcall;  external 'TitanEngine.dll' name 'GetActiveProcessId';
  function EnumProcessesWithLibrary(szLibraryName:PAnsiChar; EnumFunction:Pointer):LongInt; stdcall;  external 'TitanEngine.dll' name 'EnumProcessesWithLibrary';
{TitanEngine.TLSFixer.functions}
  function TLSBreakOnCallBack(ArrayOfCallBacks:Pointer; NumberOfCallBacks:LongInt; bpxCallBack:Pointer):boolean; stdcall;  external 'TitanEngine.dll' name 'TLSBreakOnCallBack';
  function TLSGrabCallBackData(szFileName:PAnsiChar; ArrayOfCallBacks,NumberOfCallBacks:Pointer):boolean; stdcall;  external 'TitanEngine.dll' name 'TLSGrabCallBackData';
  function TLSBreakOnCallBackEx(szFileName:PAnsiChar; bpxCallBack:Pointer):boolean; stdcall;  external 'TitanEngine.dll' name 'TLSBreakOnCallBackEx';
  function TLSRemoveCallback(szFileName:PAnsiChar):boolean; stdcall;  external 'TitanEngine.dll' name 'TLSRemoveCallback';
  function TLSRemoveTable(szFileName:PAnsiChar):boolean; stdcall;  external 'TitanEngine.dll' name 'TLSRemoveTable';
  function TLSBackupData(szFileName:PAnsiChar):boolean; stdcall;  external 'TitanEngine.dll' name 'TLSBackupData';
  function TLSRestoreData():boolean; stdcall;  external 'TitanEngine.dll' name 'TLSRestoreData';
  function TLSBuildNewTable(FileMapVA,StorePlace,StorePlaceRVA:LongInt; ArrayOfCallBacks:Pointer; NumberOfCallBacks:LongInt):boolean; stdcall;  external 'TitanEngine.dll' name 'TLSBuildNewTable';
  function TLSBuildNewTableEx(szFileName,szSectionName:PAnsiChar; ArrayOfCallBacks:Pointer; NumberOfCallBacks:LongInt):boolean; stdcall;  external 'TitanEngine.dll' name 'TLSBuildNewTableEx';
{TitanEngine.TranslateName.functions}
  function TranslateNativeName(szNativeName:PAnsiChar):PAnsiChar; stdcall;  external 'TitanEngine.dll' name 'TranslateNativeName';
{TitanEngine.Handler.functions}
  function HandlerGetActiveHandleCount(ProcessId:LongInt):LongInt; stdcall;  external 'TitanEngine.dll' name 'HandlerGetActiveHandleCount';
  function HandlerIsHandleOpen(ProcessId:LongInt; hHandle:THandle):boolean; stdcall;  external 'TitanEngine.dll' name 'HandlerIsHandleOpen';
  function HandlerGetHandleName(hProcess:THandle; ProcessId:LongInt; hHandle:THandle; TranslateName:boolean):PAnsiChar; stdcall;  external 'TitanEngine.dll' name 'HandlerGetHandleName';
  function HandlerEnumerateOpenHandles(ProcessId:LongInt; HandleBuffer:Pointer; MaxHandleCount:LongInt):LongInt; stdcall;  external 'TitanEngine.dll' name 'HandlerEnumerateOpenHandles';
  function HandlerGetHandleDetails(hProcess:THandle; ProcessId:LongInt; hHandle:THandle; InformationReturn:LongInt):LongInt; stdcall;  external 'TitanEngine.dll' name 'HandlerGetHandleDetails';
  function HandlerCloseRemoteHandle(ProcessId:LongInt; hHandle:THandle):boolean; stdcall;  external 'TitanEngine.dll' name 'HandlerCloseRemoteHandle';
  function HandlerEnumerateLockHandles(szFileOrFolderName:PAnsiChar; NameIsFolder,NameIsTranslated:boolean; HandleDataBuffer:Pointer; MaxHandleCount:LongInt):LongInt; stdcall;  external 'TitanEngine.dll' name 'HandlerEnumerateLockHandles';
  function HandlerCloseAllLockHandles(szFileOrFolderName:PAnsiChar; NameIsFolder,NameIsTranslated:boolean):boolean; stdcall;  external 'TitanEngine.dll' name 'HandlerCloseAllLockHandles';
  function HandlerIsFileLocked(szFileOrFolderName:PAnsiChar; NameIsFolder,NameIsTranslated:boolean):boolean; stdcall;  external 'TitanEngine.dll' name 'HandlerIsFileLocked';
  function HandlerEnumerateOpenMutexes(hProcess:THandle; ProcessId:LongInt; HandleBuffer:Pointer; MaxHandleCount:LongInt):LongInt; stdcall;  external 'TitanEngine.dll' name 'HandlerEnumerateOpenMutexes';
  function HandlerGetOpenMutexHandle(hProcess:THandle; ProcessId:LongInt; szMutexString:PAnsiChar):LongInt; stdcall;  external 'TitanEngine.dll' name 'HandlerGetOpenMutexHandle';
  function HandlerGetProcessIdWhichCreatedMutex(szMutexString:PAnsiChar):LongInt; stdcall;  external 'TitanEngine.dll' name 'HandlerGetProcessIdWhichCreatedMutex';
{TitanEngine.Injector.functions}
  function RemoteLoadLibrary(hProcess:THandle; szLibraryFile:PAnsiChar; WaitForThreadExit:boolean):boolean; stdcall;  external 'TitanEngine.dll' name 'RemoteLoadLibrary';
  function RemoteFreeLibrary(hProcess:THandle; hModule:LongInt; szLibraryFile:PAnsiChar; WaitForThreadExit:boolean):boolean; stdcall;  external 'TitanEngine.dll' name 'RemoteFreeLibrary';
  function RemoteExitProcess(hProcess:THandle; ExitCode:LongInt):boolean; stdcall;  external 'TitanEngine.dll' name 'RemoteExitProcess';
{TitanEngine.StaticUnpacker.functions}
  function StaticFileLoad(szFileName:PAnsiChar; DesiredAccess:LongInt; SimulateLoad:boolean; FileHandle,LoadedSize,FileMap,FileMapVA:Pointer):boolean; stdcall;  external 'TitanEngine.dll' name 'StaticFileLoad';
  function StaticFileUnload(szFileName:PAnsiChar; CommitChanges:boolean; FileHandle,LoadedSize,FileMap,FileMapVA:LongInt):boolean; stdcall;  external 'TitanEngine.dll' name 'StaticFileUnload';
  function StaticFileOpen(szFileName:PAnsiChar; DesiredAccess:LongInt; FileHandle,FileSizeLow,FileSizeHigh:Pointer):boolean; stdcall;  external 'TitanEngine.dll' name 'StaticFileOpen';
  function StaticFileGetContent(FileHandle:THandle; FilePositionLow:LongInt; FilePositionHigh,Buffer:Pointer; Size:LongInt):boolean; stdcall;  external 'TitanEngine.dll' name 'StaticFileGetContent';
  procedure StaticFileClose(FileHandle:THandle); stdcall;  external 'TitanEngine.dll' name 'StaticFileClose';
  procedure StaticMemoryDecrypt(MemoryStart,MemorySize,DecryptionType,DecryptionKeySize,DecryptionKey:LongInt); stdcall;  external 'TitanEngine.dll' name 'StaticMemoryDecrypt';
  procedure StaticMemoryDecryptEx(MemoryStart,MemorySize,DecryptionKeySize:LongInt; DecryptionCallBack:Pointer); stdcall;  external 'TitanEngine.dll' name 'StaticMemoryDecryptEx';
  procedure StaticMemoryDecryptSpecial(MemoryStart,MemorySize,DecryptionKeySize,SpecDecryptionType:LongInt; DecryptionCallBack:Pointer); stdcall;  external 'TitanEngine.dll' name 'StaticMemoryDecryptSpecial';
  procedure StaticSectionDecrypt(FileMapVA,SectionNumber:LongInt; SimulateLoad:boolean; DecryptionType,DecryptionKeySize,DecryptionKey:LongInt); stdcall;  external 'TitanEngine.dll' name 'StaticSectionDecrypt';
  function StaticMemoryDecompress(Source,SourceSize,Destination,DestinationSize,Algorithm:LongInt):boolean; stdcall;  external 'TitanEngine.dll' name 'StaticMemoryDecompress';
  function StaticRawMemoryCopy(hFile:THandle; FileMapVA,VitualAddressToCopy,Size:LongInt; AddressIsRVA:boolean; szDumpFileName:PAnsiChar):boolean; stdcall;  external 'TitanEngine.dll' name 'StaticRawMemoryCopy';
  function StaticHashMemory(MemoryToHash:Pointer; SizeOfMemory:LongInt; HashDigest:Pointer; OutputString:boolean; Algorithm:LongInt):boolean; stdcall;  external 'TitanEngine.dll' name 'StaticHashMemory';
  function StaticHashFile(szFileName,HashDigest:PAnsiChar; OutputString:boolean; Algorithm:LongInt):boolean; stdcall;  external 'TitanEngine.dll' name 'StaticHashFile';
{TitanEngine.Engine.functions}
  procedure SetEngineVariable(VariableId:LongInt; VariableSet:boolean); stdcall;  external 'TitanEngine.dll' name 'SetEngineVariable';
  function EngineCreateMissingDependencies(szFileName,szOutputFolder:PAnsiChar; LogCreatedFiles:boolean):boolean; stdcall;  external 'TitanEngine.dll' name 'EngineCreateMissingDependencies';
  function EngineFakeMissingDependencies(hProcess:THandle):boolean; stdcall;  external 'TitanEngine.dll' name 'EngineCreateMissingDependencies';
  function EngineDeleteCreatedDependencies():boolean; stdcall;  external 'TitanEngine.dll' name 'EngineDeleteCreatedDependencies';
  function EngineCreateUnpackerWindow(WindowUnpackerTitle,WindowUnpackerLongTitleWindowUnpackerName,WindowUnpackerAuthor:PChar; StartUnpackingCallBack:Pointer):boolean; stdcall;  external 'TitanEngine.dll' name 'EngineCreateUnpackerWindow';
  procedure EngineAddUnpackerWindowLogMessage(szLogMessage:PChar); stdcall;  external 'TitanEngine.dll' name 'EngineAddUnpackerWindowLogMessage';
{TitanEngine.Extension.functions}
  function ExtensionManagerIsPluginLoaded(szPluginName:PAnsiChar):boolean; stdcall;  external 'TitanEngine.dll' name 'ExtensionManagerIsPluginLoaded';
  function ExtensionManagerIsPluginEnabled(szPluginName:PAnsiChar):boolean; stdcall;  external 'TitanEngine.dll' name 'ExtensionManagerIsPluginEnabled';
